--- a/css/style.css
+++ b/css/style.css
@@ -266,7 +266,7 @@ hr {
 
 .welcome-part-one {
     background-color: #FF7361;
-    padding-top: 51px;
+    padding-top: 15px;
     margin-top: -20px;
     padding-bottom: 35px;
 }
@@ -634,41 +634,6 @@ hr {
 
 /*blog part*/
 
-.blog--top-part2892 {
-    margin-top: 40px;
-}
-
-.blog-part3903 {
-    margin-top: 30px;
-    background-color: #ffffff;
-    padding: 15px;
-    -webkit-box-shadow: 0px 0px 13px -3px;
-            box-shadow: 0px 0px 13px -3px;
-}
-
-.blog-details3902 h3 {
-    font-size: 20px;
-    color: #FF7361;
-}
-
-.blog-details3902 i {
-    font-size: 20px;
-    padding-top: 10px;
-}
-
-.ques-icon-info2933 i {
-    font-size: 13px;
-    padding-right: 10px;
-    color: #222629;
-}
-
-.blog-part3903 p {
-    margin-top: 20px;
-    font-size: 13px;
-    color: #848991;
-    font-family: fontawesome;
-}
-
 .continue-deatils738 {
     text-align: right;
 }
@@ -706,22 +671,6 @@ hr {
 .sidebar97239 {
     margin-top: 70px;
 }
-
-.status-part3821 {
-    background-color: #fff;
-    padding: 15px;
-    -webkit-box-shadow: 0px 0px 13px -3px;
-            box-shadow: 0px 0px 13px -3px;
-}
-
-.status-part3821 h4 {
-    color: #FF7361;
-    font-weight: bold;
-    font-family: serif;
-    border-bottom: 2px solid #eaeaeb;
-    padding-bottom: 10px;
-}
-
 
 /*categori part*/
 
@@ -770,361 +719,6 @@ hr {
     -o-transition: .5s;
     transition: .5s;
 }
-
-.status-part3821 i {
-    background-color: #EAEAEB;
-    padding: 15px 123px 15px 10px;
-    font-size: 15px;
-    color: black;
-    font-weight: bold;
-    margin-top: 10px;
-}
-
-
-/*social part*/
-
-.social-part2189 {
-    background-color: #fff;
-    padding: 15px;
-    margin-top: 30px;
-    -webkit-box-shadow: 0px 0px 13px -3px;
-            box-shadow: 0px 0px 13px -3px;
-}
-
-.social-part2189 h4 {
-    color: #FF7361;
-    font-weight: bold;
-    font-family: serif;
-    border-bottom: 2px solid #eaeaeb;
-    padding-bottom: 10px;
-}
-
-.social-part2189 li {
-    list-style: none;
-}
-
-.rss-one {
-    background-color: #faa33d;
-    padding: 15px;
-    border-radius: 2px;
-}
-
-.rss-one:hover {
-    background-color: #222629;
-    padding: 15px;
-    -webkit-transition: .6s;
-    -o-transition: .6s;
-    transition: .6s;
-}
-
-.rss-one i {
-    float: right;
-    font-size: 40px;
-}
-
-.rss-one a {
-    text-decoration: none;
-    color: #fff;
-}
-
-
-/*facebook*/
-
-.facebook-two {
-    background-color: #5d82d1;
-    padding: 15px;
-    border-radius: 2px;
-    margin-top: 10px;
-}
-
-.facebook-two:hover {
-    background-color: #222629;
-    padding: 15px;
-    -webkit-transition: .6s;
-    -o-transition: .6s;
-    transition: .6s;
-}
-
-.facebook-two i {
-    float: right;
-    font-size: 40px;
-}
-
-.facebook-two a {
-    text-decoration: none;
-    color: #fff;
-}
-
-
-/*twitter*/
-
-.twitter-three {
-    background-color: #40bff5;
-    padding: 15px;
-    border-radius: 2px;
-    margin-top: 10px;
-}
-
-.twitter-three:hover {
-    background-color: #222629;
-    padding: 15px;
-    -webkit-transition: .6s;
-    -o-transition: .6s;
-    transition: .6s;
-}
-
-.twitter-three i {
-    float: right;
-    font-size: 40px;
-}
-
-.twitter-three a {
-    text-decoration: none;
-    color: #fff;
-}
-
-
-/*youtube*/
-
-.youtube-four {
-    background-color: #c4302b;
-    padding: 15px;
-    border-radius: 2px;
-    margin-top: 10px;
-}
-
-.youtube-four:hover {
-    background-color: #222629;
-    padding: 15px;
-    -webkit-transition: .6s;
-    -o-transition: .6s;
-    transition: .6s;
-}
-
-.youtube-four i {
-    float: right;
-    font-size: 40px;
-}
-
-.youtube-four a {
-    text-decoration: none;
-    color: #fff;
-}
-
-
-/*login part*/
-
-
-/*username*/
-
-.login-part2389 {
-    background-color: #fff;
-    padding: 15px;
-    margin-top: 30px;
-    -webkit-box-shadow: 0px 0px 13px -3px;
-            box-shadow: 0px 0px 13px -3px;
-}
-
-.login-part2389 h4 {
-    color: #FF7361;
-    font-weight: bold;
-    font-family: serif;
-    border-bottom: 2px solid #eaeaeb;
-    padding-bottom: 10px;
-}
-
-.login-part2389 .fa-user {
-    margin-left: 10px;
-    position: absolute;
-    z-index: 9999;
-    margin-top: 6px;
-    font-size: 25px;
-    color: #FF7361;
-}
-
-.login-part2389 .namein309 {
-    position: relative;
-    z-index: 1;
-    padding-left: 30px;
-    height: 40px;
-    width: 235px;
-    border: 1px solid #FF7361;
-    outline: none;
-    background: rgba(255, 115, 97, 0.20);
-    color: #000;
-    font-weight: bold;
-}
-
-
-/*password login*/
-
-.input-group300 {
-    margin-top: 10px;
-}
-
-.login-part2389 .fa-lock {
-    margin-left: 10px;
-    position: absolute;
-    z-index: 9999;
-    margin-top: 6px;
-    font-size: 25px;
-    color: #FF7361;
-}
-
-.login-part2389 .passin309 {
-    position: relative;
-    z-index: 1;
-    padding-left: 30px;
-    height: 40px;
-    width: 235px;
-    border: 1px solid #FF7361;
-    outline: none;
-    background: rgba(255, 115, 97, 0.20);
-    color: #000;
-    font-weight: bold;
-}
-
-.userlogin320 {
-    margin-top: 15px;
-    height: 35px;
-    width: 235px;
-    text-align: center;
-    background-color: #FF7361;
-    border: none;
-    font-weight: bold;
-    color: #fff;
-    border-radius: 2px;
-}
-
-.userlogin320:hover {
-    margin-top: 15px;
-    height: 35px;
-    width: 235px;
-    text-align: center;
-    background-color: #222629;
-    border: none;
-    font-weight: bold;
-    color: #fff;
-    -webkit-transition: .6s;
-    -o-transition: .6s;
-    transition: .6s;
-    border-radius: 2px;
-}
-
-.rememberme {
-    margin-top: 10px;
-}
-
-.rememberme label {
-    margin: 0;
-    display: inline;
-    font-size: 13px;
-    color: #FF7361;
-}
-
-.rememberme a {
-    text-decoration: none;
-}
-
-.resbutton3892 {
-    color: #222629;
-    float: right;
-    font-size: 12px;
-}
-
-.resbutton3892:hover {
-    color: #FF7361;
-    float: right;
-    font-size: 12px;
-}
-
-
-/*highest points*/
-
-.highest-part302 {
-    background-color: #fff;
-    padding: 15px;
-    margin-top: 30px;
-    -webkit-box-shadow: 0px 0px 13px -3px;
-            box-shadow: 0px 0px 13px -3px;
-}
-
-.highest-part302 h4 {
-    color: #FF7361;
-    font-weight: bold;
-    font-family: serif;
-    border-bottom: 2px solid #eaeaeb;
-    padding-bottom: 10px;
-}
-
-.left-user3898 {
-    position: relative;
-}
-
-.left-user3898 img {
-    height: 50px;
-    width: 50px;
-    border-radius: 50%;
-    border: 1px solid #dedede;
-}
-
-.imag-overlay39 {
-    position: absolute;
-    height: 50px;
-    width: 50px;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    opacity: 0;
-    -webkit-transition: .5s ease;
-    -o-transition: .5s ease;
-    transition: .5s ease;
-    background-color: #FF7361;
-    border-radius: 50%;
-}
-
-.imag-overlay39 {
-    padding-left: 20px;
-    padding-top: 15px;
-}
-
-.imag-overlay39 a {
-    color: #ffffff;
-}
-
-.left-user3898:hover .imag-overlay39 {
-    opacity: 1;
-}
-
-.left-user3898 {
-    float: left;
-    margin-right: 30px;
-}
-
-.designetion439 {
-    padding: 3px;
-    background-color: #DD9933;
-    color: #fff;
-    font-family: fontawesome;
-    border-radius: 2px;
-}
-
-.points-details938 p {
-    font-family: fontawesome;
-}
-
-.points-details938 h5 {
-    color: #fd7362;
-    font-weight: bold;
-    text-decoration: none;
-}
-
-.points-details938 a {
-    text-decoration: none;
-    color: #fff;
-}
-
 
 /*----start tags part----*/
 
@@ -1210,7 +804,7 @@ h5:hover {
 }
 
 
-/*footer -top serch*/
+/*footer -top search*/
 
 .footer-search {
     margin-top: 50px;
@@ -1329,74 +923,6 @@ h5:hover {
 
 .last-child12892 > p {
     border-bottom: none;
-}
-
-.info-part-three320 h4 {
-    color: #fd6372;
-    font-family: fontawesome;
-}
-
-.news-info209 {
-    border-bottom: 1px dotted #43464b;
-}
-
-.news-info209:last-child {
-    border-bottom: none;
-}
-
-.news-info209 h5 {
-    color: #ddd;
-    font-family: fontawesome;
-}
-
-.news-info209 h5:hover {
-    color: #fd6372;
-    font-family: fontawesome;
-}
-
-.news-info209 p {
-    color: #c2c8d4;
-    font-family: fontawesome;
-}
-
-.news-info209 > small {
-    color: #fd6372;
-    font-family: fontawesome;
-}
-
-.info-part-four320 h4 {
-    color: #fd6372;
-    font-family: fontawesome;
-}
-
-.tweet-details29 {
-    border-bottom: 1px dotted #43464b;
-}
-
-.tweet-details29:last-child {
-    border-bottom: none;
-}
-
-.tweet-details29 i {
-    color: #ddd;
-    margin-right: 5px;
-}
-
-.tweet-details29 a {
-    text-decoration: none;
-    color: #c2c8d4;
-    font-family: fontawesome;
-}
-
-.tweet-details29 a:hover {
-    text-decoration: none;
-    color: #fd6372;
-    font-family: fontawesome;
-}
-
-.tweet-details29 > small {
-    color: #fd6372;
-    font-family: fontawesome;
 }
 
 .footer-social {
