--- a/css/loginstyle.css
+++ b/css/loginstyle.css
@@ -136,6 +136,7 @@ label:first-child {
   background: white;
   padding: 40px 100px;
   box-shadow: 0px 50px 30px -30px rgba(0, 0, 0, 0.3);
+  border-radius: 15px;
   margin-bottom: 50px;
   position: absolute;
   top: 0;
@@ -171,4 +172,13 @@ label:first-child {
   display: inline-block;
   cursor: pointer;
     margin-bottom: 20px;
+}
+
+#response{
+  color: #CF4539;
+}
+
+a{
+  text-decoration: none;
+  color: #2a9df4;
 }
