--- a/css/style.css
+++ b/css/style.css
@@ -217,7 +217,10 @@ hr {
     background-color: #ff7361;
 }
 
-.navbar-default .navbar-nav > .open > a,
+.navbar-default .navbar-nav > .open > a{
+    background-color: transparent;
+}
+
 .navbar-default .navbar-nav > .open > a:hover,
 .navbar-default .navbar-nav > .open > a:focus {
     color: #fff;
@@ -261,7 +264,21 @@ hr {
     line-height: 1.42857143;
     color: #333;
     white-space: nowrap;
-    font-family: serif;
+}
+
+.profile-icon{
+    padding: 0% !important;
+}
+
+.profile-icon:hover,
+.profile-icon:focus{
+    background-color: transparent !important;
+}
+
+.profile-icon img{
+    height: 30px;
+    width: 30px;
+    border-radius: 50%;
 }
 
 /* welcome part one*/
@@ -592,7 +609,6 @@ hr {
 
 .ques-details10018 p {
     margin-top: 10px;
-    font-family: fontawesome;
 }
 
 .ques-icon-info3293 {
@@ -1154,7 +1170,8 @@ h5:hover {
 
 .publis1291 {
     padding: 5px 15px 5px 15px;
-    width: 100%;
+    margin-left: 45%;
+    width: auto;
     color: #fff;
     background-color: #FF7361;
     border: none;
@@ -1165,7 +1182,6 @@ h5:hover {
 
 .publis1291:hover {
     padding: 5px 15px 5px 15px;
-    width: 100%;
     color: #fff;
     background-color: #222629;
     border: none;
@@ -1178,6 +1194,7 @@ h5:hover {
 
 .post-details {
     margin-top: 70px;
+    border-radius: 10px;
     background-color: #fff;
     padding: 15px;
     -webkit-box-shadow: 0px 0px 13px -3px;
@@ -1186,7 +1203,7 @@ h5:hover {
 
 .post-que-rep-rihght320 {
     float: right;
-    margin-top: 25px;
+    margin-top: 0px;
 }
 
 .post-que-rep-rihght320 a {
@@ -1194,22 +1211,22 @@ h5:hover {
     background-color: #FF7361;
     padding: 5px;
     color: #fff;
-    font-family: fontawesome;
     font-size: 12px;
 }
 
 .post-details-info1982 {
     margin-top: 30px;
     line-height: 1.5em;
-    font-family: fontawesome;
 }
 
 .post-details-info1982 p {
     margin-bottom: 30px;
+    text-align: justify;
 }
 
 .r-clor10 {
     background-color: #fd6372;
+    border-radius: 6px;
 }
 
 .r-clor10:hover {
@@ -1224,22 +1241,6 @@ h5:hover {
 
 .l-side2023 {
     display: inline-block;
-}
-
-.l-side2023 .check2 {
-    color: #318e08;
-}
-
-.l-side2023 .star2 {
-    color: #dfaa63;
-}
-
-.l-side2023 .folder2 {
-    color: #222629
-}
-
-.l-side2023 .folder2:hover {
-    color: #fd6372;
 }
 
 .l-side2023 .clock2 {
@@ -1268,16 +1269,13 @@ h5:hover {
     font-size: 12px;
 }
 
+.upvote-arrow{
+    color: blue;
+}
 
-/*
-.l-rightside39 .thumbs-up2:hover{
- background-color: #338338;
-    
+.downvote-arrow{
+    color: red;
 }
-.l-rightside39 .thumbs-down2:hover{
-   background-color: #990707;
-}
-*/
 
 .share-tags-page-content12092 {
     background-color: #fff;
@@ -1303,7 +1301,7 @@ h5:hover {
     position: relative;
     float: left;
     background-color: #fff;
-    height: 100px;
+    height: auto;
     width: 70px;
 }
 
@@ -1346,7 +1344,7 @@ h5:hover {
     background-color: #fff;
     padding: 40px;
     margin-top: 20px;
-    font-family: fontawesome;
+    border-radius: 10px;
     -webkit-box-shadow: 0px 0px 13px -3px;
             box-shadow: 0px 0px 13px -3px;
 }
@@ -1357,10 +1355,20 @@ h5:hover {
     font-weight: bold;
 }
 
+.author-deatila04re p{
+    overflow: hidden;
+    -o-text-overflow: ellipsis;
+       text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+}
+
 .related3948-question-part {
     background-color: #fff;
     padding: 20px;
     margin-top: 20px;
+    border-radius: 10px;
     -webkit-box-shadow: 0px 0px 13px -3px;
             box-shadow: 0px 0px 13px -3px;
 }
@@ -1368,7 +1376,6 @@ h5:hover {
 .related3948-question-part a {
     text-decoration: none;
     color: #222629;
-    font-family: fontawesome;
     font-weight: bold;
     font-size: 15px;
 }
@@ -1376,20 +1383,20 @@ h5:hover {
 .related3948-question-part a:hover {
     text-decoration: none;
     color: #fd6372;
-    font-family: fontawesome;
     font-weight: bold;
     font-size: 15px;
 }
 
 
 /** ====================
- * Lista of Comentarios
+ * List of Comments
  =======================*/
 
 .comment-list12993 {
     background-color: #fff;
     padding: 20px;
     margin-top: 20px;
+    border-radius: 10px;
     -webkit-box-shadow: 0px 0px 13px -3px;
             box-shadow: 0px 0px 13px -3px;
 }
@@ -1582,7 +1589,6 @@ h5:hover {
 .comment-box .comment-name a {
     color: #283035;
     text-decoration: none;
-    font-family: fontawesome;
 }
 
 .comment-box .comment-name a:hover {
@@ -1599,7 +1605,6 @@ h5:hover {
 }
 
 .comment-box .comment-content {
-    font-family: fontawesome;
     background: #FFF;
     padding: 12px;
     font-size: 15px;
@@ -1611,7 +1616,6 @@ h5:hover {
 .comment-box .comment-name.by-author a {
     color: #222629;
     text-decoration: none;
-    font-family: fontawesome;
 }
 
 .comment-box .comment-name.by-author,
@@ -1629,7 +1633,6 @@ h5:hover {
     font-weight: 700;
     margin-left: 10px;
     border-radius: 3px;
-    font-family: fontawesome;
 }
 
 
@@ -1653,7 +1656,6 @@ h5:hover {
     width: 100%;
     outline: none;
     border: 1px solid #fd6372;
-    color: #FF7361;
     font-weight: bold;
     padding: 10px;
 }
@@ -1666,7 +1668,6 @@ h5:hover {
     border: none;
     color: #fff;
     font-weight: bold;
-    font-family: fontawesome;
     -webkit-transition: .5s;
     -o-transition: .5s;
     transition: .5s;
